Fixed overflow being hidden

--- a/styles/components/Navbar/LeftSideMenu.module.css
+++ b/styles/components/Navbar/LeftSideMenu.module.css
@@ -1,11 +1,10 @@
 .menu {
-  @apply h-screen flex-col justify-start gap-6 overflow-hidden p-6 backdrop-blur-xl max-sm:max-w-xs max-xs:w-72;
+  @apply h-screen flex-col justify-start gap-6 overflow-x-hidden overflow-y-auto p-6 backdrop-blur-xl max-sm:max-w-xs max-xs:w-72;
   position: fixed;
   top: 0;
   left: 0;
   z-index: 51;
   pointer-events: all;
-  overflow: hidden;
   display: flex;
 }
 
